--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "node ."
+    "run": "node ."
   },
   "author": "PolicePocholo",
   "license": "ISC",
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "terminal-kit": "^2.0.3"
   }
 }
